<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="25dp">


    <TextView
        android:id="@+id/plecTxt"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:text="@string/sexTxt" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:entries="@array/sexChoose" />

    <TextView
        android:id="@+id/weightTxt"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="@string/weightTxt" />

    <EditText
        android:id="@+id/ETWeight"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:text="@string/heightTxt" />

    <EditText
        android:id="@+id/ETHeight"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heightHint"
        android:inputType="text" />

    <TextView
        android:id="@+id/unitsTxt"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:text="@string/unitsTxt" />

    <Spinner
        android:id="@+id/units"
        android:layout_width="152dp"
        android:layout_height="43dp"
        android:entries="@array/heightUnits" />

    <TextView
        android:id="@+id/ageTxt"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/ageTxt" />

    <EditText
        android:id="@+id/ETAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true" />

    <TextView
        android:id="@+id/wayTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wayTxt" />

    <Spinner
        android:id="@+id/waySpinner"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:entries="@array/wayPPM" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/button_txt" />

    <TextView
        android:id="@+id/ETAns"
        android:layout_width="match_parent"
        android:layout_height="31dp" />

</LinearLayout>